# w2s

./: pyproject.toml  train_weak_to_strong.py
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _tkinter.data.json  _tkinter.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  (+244 more)
.mypy_cache/3.11/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.11/PyQt5/: QtCore.meta.json  QtGui.meta.json  QtSvg.data.json  QtSvg.meta.json  QtWidgets.meta.json  __init__.data.json  __init__.meta.json  sip.data.json  sip.meta.json
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.11/asttokens/: __init__.data.json  __init__.meta.json  astroid_compat.data.json  astroid_compat.meta.json  asttokens.data.json  asttokens.meta.json  line_numbers.data.json  (+5 more)
(+4128 files in other folders)
