[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "weak_to_strong"
version = "0.0.1"
authors = ["OpenAI", "generalization@openai.com"]

description = "Weak-to-strong generalization"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.24,<2.0"
transformers = ">=4.36,<5.0"
fire = ">=0.4,<1.0"
transformers-stream-generator = ">=0.0.4,<0.1.0"
multidict = "5.2.0a25"
torch = ">=2.1,<3.0"
datasets = ">=2.14,<3.0"
accelerate = ">=0.25,<1.0"
torch-optimizer = ">=0.3,<1.0"
wandb = "^0.16.1"
